--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <body>
     <h1 class="title"> About </h1>
     <h2 class="subtitle"> About Wija </h2>
-    <p> Back in the long time ago of 2020 - the year of the pandemic. I started to learn HTML and CSS. Since then my skills in both langages have grown and now I can make simple website like this one. <br> Bye!</p>
+    <p> Back in the long time ago of 2020,the year of the pandemic, I started to learn HTML and CSS. Since then my skills in both langages have grown (a tiny bit) and now I can make simple website like this one. <br> Bye!</p>
     <h2 class="subtitle"> Nimbostratus Team </h2>
     <p> Nimbostratus Team is a group of my friends who do (stupid) things. :)</p>
 </body>
