--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 <link rel="stylesheet" href="/src/style.css">
 <body>
    <div>
-    <h1 class="title"><b>Welcome to my website!</b> </h1>
+    <header>
+    <h1><b>Welcome to my website!</b> </h1>
+    </header>
     </div>
-    <div >
-    <p> Hi if you don't know me I'm Wija! I am a student in Secondary School also learning web development! <br> It's pretty neat. </p>
-    <p> I use VS Code and GitHub. :) bye! </p>
+     <div >
+        <p> Hi if you don't know me I'm Wija! I am a student in Secondary School also learning web development! <br> It's pretty neat. </p>
+        <p> I use VS Code and GitHub. :) bye! </p>
     </div>
     <div>
         <p> The source code for this website can be found at <a href="https://github.com/wijathemidja/firstrepo/blob/main/index.html"> GitHub.</a></p>
